# radar

./: CMakeLists.txt  CREATE  RADAR  README.md
include/: angular_speed_estimator.h  logger.h  radar.h  radar_structures.h
scripts/: post_build_script.sh
src/: main.cpp  radar.cpp  radar_node.cpp
src/logger/: logger.cpp
